...
                    subtitleText: "Pagamento com dinheiro móvel",
                    image: AssetPaths.emola,
                    iconColor: Colors.orange,
                  ),
                  buildOption(
                    value: "cartao",
                    titleText: "Cartão",
                    subtitleText: "Pagamento com cartão bancário",
                    image: AssetPaths.creditCard,
                  ),
                  SizedBox(height: 20.sp),
                  // Confirm button
                  Padding(
...
                                  ),
                                ]
                              : [],
                        ),
                        child: Center(
                          child: Text(
                            'Pagar',
                            style: GoogleFonts.poppins(
                              color: selectedMethod.isNotEmpty
                                  ? Colors.white
                                  : Colors.grey,
                              fontSize: 15.sp,
                              fontWeight: FontWeight.w600,
...
