...
      case "Moto":
      case "Moto (Txopela)":
        return "moto";
      case "Txopela":
        return "txopela";
      case "Econômico":
      case "Económico":
        return "economico";
      case "Sedan":
        return "sedan";
      case "Caravan":
        return "caravan";
      case "SUV":
...
